feat!: use canonical world identity in Wazoo API
